Fixing the alignment of chart top controls.

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -104,7 +104,7 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
     justify-content: space-between
     flex-wrap: wrap
 
-    .chart-display-property-selector,   .chart-display-property-selector, .chart-data-interval-selector
+    .chart-display-property-selector, .chart-data-interval-selector
 
       margin: 0 $gap/2 $gap/2 0
       text-align: right
@@ -225,15 +225,9 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
     $bar-color: #7B7226
     $bar-color-light: #d5c668
 
-    .filter-and-sort
+    .filters
       display: flex
       flex-wrap: wrap
-      margin-top: $gap / 2
-      margin-bottom: $gap
-      justify-content: space-between
-      .filters
-        display: flex
-        flex-wrap: wrap
 
     .filters__query
       margin-left: $gap/2
